--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,32 @@
   padding: 0;
 }
 
+.body-of-the-page {
+  background-color: transparent;
+  position: relative;
+  z-index: 0;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
+.slide--slide-intro {
+  background-image: -webkit-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: -moz-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: -ms-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: -o-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 /*# sourceMappingURL=index.css.map */
