--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -1,1 +1,24 @@
 @import './normalize';
+
+.container {
+  width: 100%;
+  height: 100vh;
+}
+
+.slide {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: $background-layer;
+
+		&--slide-intro {
+      background-image: -webkit-linear-gradient(0deg, rgba(0,18,255,1) 0%, rgba(0,255,239,1) 100%);
+      background-image: -moz-linear-gradient(0deg, rgba(0,18,255,1) 0%, rgba(0,255,239,1) 100%);
+      background-image: -ms-linear-gradient(0deg, rgba(0,18,255,1) 0%, rgba(0,255,239,1) 100%);
+      background-image: -o-linear-gradient(0deg, rgba(0,18,255,1) 0%, rgba(0,255,239,1) 100%);
+      background-image: linear-gradient(0deg, rgba(0,18,255,1) 0%, rgba(0,255,239,1) 100%);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+		}
+}
