--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,21 @@
   z-index: 0;
 }
 
+.bubble {
+  width: 100%;
+  height: 100%;
+  max-width: 1vw;
+  max-height: 1vw;
+  border-radius: 50%;
+  background-color: red;
+  position: absolute;
+  z-index: 5;
+}
+.bubble--big-size {
+  max-width: 10vw;
+  max-height: 10vw;
+}
+
 .container {
   width: 100%;
   height: 100vh;
