--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -16,6 +16,27 @@ $average-layer: 5;
 $top-layer: 10;
 $highest-layer: 1000;
 
+@mixin box-sizing($sizing) {
+  -webkit-box-sizing: $sizing;
+  -moz-box-sizing: $sizing;
+  -ms-box-sizing: $sizing;
+  -o-box-sizing: $sizing;
+  box-sizing: $sizing;
+}
+
+@mixin linear-gradient($gradient...) {
+  background-image: -webkit-linear-gradient($gradient);
+  background-image: -moz-linear-gradient($gradient);
+  background-image: -ms-linear-gradient($gradient);
+  background-image: -o-linear-gradient($gradient);
+  background-image: linear-gradient($gradient);
+}
+
+@mixin max-width-and-height($width, $height) {
+  max-width: $width;
+  max-height: $height;
+}
+
 :root {
   font-family: monospace;
   font-weight: 400;
@@ -27,11 +48,7 @@ $highest-layer: 1000;
 *,
 *:after,
 *:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
+  @include box-sizing(border-box);
   margin: 0;
   padding: 0;
 }
