--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,9 @@
   height: 100%;
   position: relative;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .slide--slide-intro {
   background-image: -webkit-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
@@ -59,6 +62,23 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+.slide__inner {
+  width: 100%;
+  height: 100%;
+  min-width: 320px;
+  min-height: 320px;
+  max-width: 60vw;
+  max-height: 60vh;
+  padding: 0 20px;
+  z-index: 10;
+}
+.slide__form-holder {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=index.css.map */
