--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,70 @@
   z-index: 0;
 }
 
+.add-card-form {
+  width: 100%;
+  height: 100%;
+  min-width: 280px;
+  min-height: 320px;
+  max-width: 560px;
+  max-height: 640px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.add-card-form__input-question {
+  display: block;
+  width: 100%;
+  height: 10%;
+  min-width: 280px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  border: 1px solid #000000;
+  border-radius: 25px;
+  line-height: 100%;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+.add-card-form__textarea-answer {
+  display: block;
+  width: 100%;
+  height: 30%;
+  min-width: 280px;
+  min-height: 120px;
+  max-width: 100%;
+  max-height: 180px;
+  border: 1px solid #000000;
+  border-radius: 25px;
+  margin-bottom: 10px;
+  padding: 20px 20px;
+  resize: none;
+}
+.add-card-form__select-field {
+  display: inline-block;
+  width: 100%;
+  height: 10%;
+  min-width: 280px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  border: 1px solid #000000;
+  border-radius: 25px;
+  margin-bottom: 10px;
+}
+.add-card-form__submit-button {
+  display: block;
+  width: 100%;
+  height: 10%;
+  min-width: 280px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  border: 1px solid #000000;
+  border-radius: 25px;
+}
+
 .bubble {
   width: 100%;
   height: 100%;
