--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
-  font-family: monospace;
+  font-family: "Share Tech Mono", "Ubuntu Mono", monospace;
   font-weight: 400;
   font-size: 10px;
-  line-height: 1.2;
-  color: black;
+  line-height: 1.2rem;
+  color: #000000;
 }
 
 *,
