fix: fix google font attachement: 'Share Tech Mono' and 'JetBrains Mono'

--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -63,5 +63,8 @@
 }
 
 ::placeholder {
-  
+  @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
+  line-height: 1em;
+  color: $black;
+  opacity: 50%;
 }
