--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -17,8 +17,8 @@ $top-layer: 10;
 $highest-layer: 1000;
 
 $sharetechmono-font: 'Share Tech Mono', monospace;
-$ubuntumono-font: 'Ubuntu Mono', monospace;
-$default-font: 'Share Tech Mono', 'Ubuntu Mono', monospace;
+$jetbrains-font: 'JetBrains Mono', monospace;
+$default-font: 'Share Tech Mono', 'JetBrains Mono', monospace;
 $regular: 400;
 $bold: 700;
 
