--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Share Tech Mono", "Ubuntu Mono", monospace;
+  font-family: "Share Tech Mono", "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 10px;
   line-height: 1.2rem;
@@ -86,6 +86,15 @@
   max-height: 60px;
   border: 1px solid #000000;
   border-radius: 25px;
+}
+
+::placeholder {
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1em;
+  color: #000000;
+  opacity: 50%;
 }
 
 .bubble {
