--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -16,7 +16,9 @@
     @include max-width-and-height(100%, 60px);
     border: 1px solid $black;
     border-radius: 25px;
+    @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
+    color: $black;
     margin-bottom: 10px;
     padding: 10px 20px;
   }
@@ -29,6 +31,9 @@
     @include max-width-and-height(100%, 180px);
     border: 1px solid $black;
     border-radius: 25px;
+    @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
+    line-height: 1em;
+    color: $black;
     margin-bottom: 10px;
     padding: 20px 20px;
     resize: none;
@@ -59,6 +64,10 @@
     @include max-width-and-height(100%, 60px);
     border: 1px solid $black;
     border-radius: 25px;
+    @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
+    line-height: 100%;
+    color: $black;
+    cursor: pointer;
   }
 }
 
