feat: add select's placeholders

--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -40,13 +40,16 @@
   }
 
   &__select-field {
-    display: inline-block;
     width: 100%;
     height: 10%;
     @include min-width-and-height(280px, 40px);
     @include max-width-and-height(100%, 60px);
     border: 1px solid $black;
     border-radius: 25px;
+    @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
+    line-height: 100%;
+    color: rgba($black, $half-opacity);
+    padding: 10px 20px;
     margin-bottom: 10px;
 
     &--main-catefory {
@@ -54,6 +57,9 @@
 
     &--additional-categories {
     }
+  }
+
+  &__select-item {
   }
 
   &__submit-button {
@@ -75,5 +81,5 @@
   @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
   line-height: 1em;
   color: $black;
-  opacity: 50%;
+  opacity: $half-opacity;
 }
