--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,6 @@
   resize: none;
 }
 .add-card-form__select-field {
-  display: inline-block;
   width: 100%;
   height: 10%;
   min-width: 280px;
@@ -83,6 +82,12 @@
   max-height: 60px;
   border: 1px solid #000000;
   border-radius: 25px;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
   margin-bottom: 10px;
 }
 .add-card-form__submit-button {
@@ -109,7 +114,7 @@
   font-size: 1.6rem;
   line-height: 1em;
   color: #000000;
-  opacity: 50%;
+  opacity: 0.5;
 }
 
 .bubble {
