--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@
   padding: 20px 20px;
   resize: none;
 }
-.add-card-form__select-field {
+.add-card-form__select-holder {
   width: 100%;
   height: 10%;
   min-width: 280px;
@@ -82,13 +82,18 @@
   max-height: 60px;
   border: 1px solid #000000;
   border-radius: 25px;
+  margin-bottom: 10px;
+}
+.add-card-form__select-field {
+  width: 100%;
+  height: 100%;
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 100%;
   color: rgba(0, 0, 0, 0.5);
+  border-radius: inherit;
   padding: 10px 20px;
-  margin-bottom: 10px;
 }
 .add-card-form__select-item {
   width: 100%;
