fix: fix disconnection between 'add-card-form' and dynamic selects'

--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -44,9 +44,8 @@
     height: 10%;
     @include min-width-and-height(280px, 40px);
     @include max-width-and-height(100%, 60px);
-    border: 1px solid $black;
-    border-radius: 25px;
     margin-bottom: 10px;
+    background: transparent;
   }
 
   &__select-field {
@@ -55,7 +54,8 @@
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: rgba($black, $half-opacity);
-    border-radius: inherit;
+    border: 1px solid $black;
+    border-radius: 25px;
     padding: 10px 20px;
 
     &--main-catefory {
