--- a/src/index.css
+++ b/src/index.css
@@ -80,9 +80,8 @@
   min-height: 40px;
   max-width: 100%;
   max-height: 60px;
-  border: 1px solid #000000;
-  border-radius: 25px;
   margin-bottom: 10px;
+  background: transparent;
 }
 .add-card-form__select-field {
   width: 100%;
@@ -92,7 +91,8 @@
   font-size: 1.6rem;
   line-height: 100%;
   color: rgba(0, 0, 0, 0.5);
-  border-radius: inherit;
+  border: 1px solid #000000;
+  border-radius: 25px;
   padding: 10px 20px;
 }
 .add-card-form__select-item {
