--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -51,6 +51,8 @@
   &__select-field {
     width: 100%;
     height: 100%;
+    @include min-width-and-height(280px, 40px);
+    @include max-width-and-height(100%, 60px);
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: rgba($black, $half-opacity);
