--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@
 .add-card-form__select-field {
   width: 100%;
   height: 100%;
+  min-width: 280px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.6rem;
