--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,101 @@
   z-index: 0;
 }
 
+.one-field-preloader {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes ldio-l70we991ur-1 {
+  0% {
+    top: 25px;
+    height: 50px;
+  }
+  50% {
+    top: 37.5px;
+    height: 25px;
+  }
+  100% {
+    top: 37.5px;
+    height: 25px;
+  }
+}
+@keyframes ldio-l70we991ur-2 {
+  0% {
+    top: 28.125px;
+    height: 43.75px;
+  }
+  50% {
+    top: 37.5px;
+    height: 25px;
+  }
+  100% {
+    top: 37.5px;
+    height: 25px;
+  }
+}
+@keyframes ldio-l70we991ur-3 {
+  0% {
+    top: 31.25px;
+    height: 37.5px;
+  }
+  50% {
+    top: 37.5px;
+    height: 25px;
+  }
+  100% {
+    top: 37.5px;
+    height: 25px;
+  }
+}
+.ldio-l70we991ur div {
+  position: absolute;
+  width: 15px;
+}
+
+.ldio-l70we991ur div:nth-child(1) {
+  left: 17.5px;
+  background: #001afe;
+  animation: ldio-l70we991ur-1 0.6097560976s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  animation-delay: -0.1219512195s;
+}
+
+.ldio-l70we991ur div:nth-child(2) {
+  left: 42.5px;
+  background: #2196f3;
+  animation: ldio-l70we991ur-2 0.6097560976s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  animation-delay: -0.0609756098s;
+}
+
+.ldio-l70we991ur div:nth-child(3) {
+  left: 67.5px;
+  background: #00fcef;
+  animation: ldio-l70we991ur-3 0.6097560976s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  animation-delay: undefineds;
+}
+
+.loadingio-spinner-pulse-ckjnjglaokr {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  overflow: hidden;
+  background: #ffffff;
+}
+
+.ldio-l70we991ur {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(0.3);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+
 .add-card-form {
   width: 100%;
   height: 100%;
