--- a/src/index.css
+++ b/src/index.css
@@ -273,10 +273,26 @@
   max-height: 60vh;
   padding: 0 20px;
   z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.slide__title {
+  font-family: "Share Tech Mono", "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 4rem;
+  line-height: 1em;
+  color: #ffffff;
+  word-spacing: -10px;
 }
 .slide__form-holder {
   width: 100%;
   height: 100%;
+  min-width: 280px;
+  min-height: 320px;
+  max-width: 100%;
+  max-height: 640px;
   display: flex;
   justify-content: center;
   align-items: center;
