--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -33,6 +33,21 @@
     @include max-width-and-height(60vw, 60vh);
     padding: 0 20px;
     z-index: $top-layer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    &--slide-intro {
+
+    }
+  }
+
+  &__title {
+    @include font-family-weight-size($default-font, $regular, 4rem);
+    line-height: 1em;
+    color: $white;
+    word-spacing: -10px;
 
     &--slide-intro {
 
@@ -42,6 +57,8 @@
   &__form-holder {
     width: 100%;
     height: 100%;
+    @include min-width-and-height(280px, 320px);
+    @include max-width-and-height(100%, 640px);
     display: flex;
     justify-content: center;
     align-items: center;
