--- a/src/index.css
+++ b/src/index.css
@@ -244,6 +244,9 @@
   width: 100%;
   height: 100vh;
 }
+.container--slide-cards {
+  height: auto;
+}
 
 .slide {
   width: 100%;
@@ -255,11 +258,23 @@
   align-items: center;
 }
 .slide--slide-intro {
-  background-image: -webkit-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
-  background-image: -moz-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
-  background-image: -ms-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
-  background-image: -o-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
-  background-image: linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: -webkit-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(201, 0, 245) 100%);
+  background-image: -moz-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(201, 0, 245) 100%);
+  background-image: -ms-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(201, 0, 245) 100%);
+  background-image: -o-linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(201, 0, 245) 100%);
+  background-image: linear-gradient(0deg, rgb(0, 18, 255) 0%, rgb(201, 0, 245) 100%);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.slide--slide-cards {
+  height: auto;
+  min-height: 100vh;
+  background-image: -webkit-linear-gradient(180deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: -moz-linear-gradient(180deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: -ms-linear-gradient(180deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: -o-linear-gradient(180deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
+  background-image: linear-gradient(180deg, rgb(0, 18, 255) 0%, rgb(0, 255, 239) 100%);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -267,16 +282,24 @@
 .slide__inner {
   width: 100%;
   height: 100%;
+  padding: 0 20px;
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+}
+.slide__inner--slide-intro {
   min-width: 320px;
   min-height: 320px;
   max-width: 60vw;
   max-height: 60vh;
-  padding: 0 20px;
-  z-index: 10;
-  display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+}
+.slide__inner--slide-cards {
+  min-width: 320px;
+  min-height: 320px;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .slide__title {
   font-family: "Share Tech Mono", "JetBrains Mono", monospace;
