--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -1,6 +1,7 @@
 @import './normalize';
 @import './../../blocks/add-card-form/add-card-form';
 @import './../../blocks/bubble/bubble';
+@import './../../blocks/single-card/single-card';
 
 .container {
   width: 100%;
@@ -24,7 +25,7 @@
     @include linear-gradient(
       0deg, 
       rgba(0,18,255,1) 0%, 
-      rgba(201,0,245,1) 100%);
+      rgba(0,255,239,1) 100%);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -32,11 +33,10 @@
 
   &--slide-cards {
     height: auto;
-    min-height: 100vh;
     @include linear-gradient(
       180deg,
       rgba(0,18,255,1) 0%,
-      rgba(0,255,239,1) 100%);
+      rgba(201,0,245,1) 100%);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -45,21 +45,23 @@
   &__inner {
     width: 100%;
     height: 100%;
-    padding: 0 20px;
     z-index: $top-layer;
     display: flex;
     justify-content: space-between;
 
     &--slide-intro {
-      @include min-width-and-height(320px, 320px);
-      @include max-width-and-height(60vw, 60vh);
+      @include min-width-and-height(320px, 360px);
+      @include max-width-and-height(60vw, 80vh);
+      padding: 20px;
       flex-direction: column;
       align-items: center;
     }
 
     &--slide-cards {
-      @include min-width-and-height(320px, 320px);
+      @include min-width-and-height(320px, 470px);
       flex-direction: row;
+      justify-content: center;
+      align-items: flex-start;
       flex-wrap: wrap;
     }
   }
@@ -87,5 +89,17 @@
     &--slide-intro {
         
     }
-  }  
+  }
+
+  &__single-card-holder {
+    width: 100%;
+    height: 100%;
+    @include min-width-and-height(280px, 450px);
+    @include max-width-and-height(30vw, 640px);
+    background-color: $white;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    margin: 10px 20px;
+  }
 }
