feat: add 'single-card' block and change preloader for it

--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: $top-layer;
 
   &__input-question {
     display: block;
