--- a/blocks/single-card/_single-card-preloader.scss
+++ b/blocks/single-card/_single-card-preloader.scss
@@ -7,48 +7,48 @@
   align-items: center;
 }
 
-@keyframes ldio-1akyqjrxu0e-o {
-    0%    { opacity: 1; transform: translate(0 0) }
-   49.99% { opacity: 1; transform: translate(30px,0) }
-   50%    { opacity: 0; transform: translate(30px,0) }
-  100%    { opacity: 0; transform: translate(0,0) }
+@keyframes ldio-nxtxow40e7-1 {
+  0% { top: 15px; height: 70px }
+  50% { top: 32.5px; height: 35px }
+  100% { top: 32.5px; height: 35px }
 }
-@keyframes ldio-1akyqjrxu0e {
-    0% { transform: translate(0,0) }
-   50% { transform: translate(30px,0) }
-  100% { transform: translate(0,0) }
+@keyframes ldio-nxtxow40e7-2 {
+  0% { top: 19.375px; height: 61.25px }
+  50% { top: 32.5px; height: 35px }
+  100% { top: 32.5px; height: 35px }
 }
-.ldio-1akyqjrxu0e div {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  top: 35px;
-  left: 20px;
+@keyframes ldio-nxtxow40e7-3 {
+  0% { top: 23.75px; height: 52.5px }
+  50% { top: 32.5px; height: 35px }
+  100% { top: 32.5px; height: 35px }
 }
-.ldio-1akyqjrxu0e div:nth-child(1) {
-  background: #1110fe;
-  animation: ldio-1akyqjrxu0e 0.5714285714285714s linear infinite;
-  animation-delay: -0.2857142857142857s;
+.ldio-nxtxow40e7 div { position: absolute; width: 15px }.ldio-nxtxow40e7 div:nth-child(1) {
+  left: 17.5px;
+  background: #001afe;
+  animation: ldio-nxtxow40e7-1 0.6666666666666666s cubic-bezier(0,0.5,0.5,1) infinite;
+  animation-delay: -0.13333333333333333s
 }
-.ldio-1akyqjrxu0e div:nth-child(2) {
-  background: #c600f5;
-  animation: ldio-1akyqjrxu0e 0.5714285714285714s linear infinite;
-  animation-delay: 0s;
+.ldio-nxtxow40e7 div:nth-child(2) {
+  left: 42.5px;
+  background: #2196f3;
+  animation: ldio-nxtxow40e7-2 0.6666666666666666s cubic-bezier(0,0.5,0.5,1) infinite;
+  animation-delay: -0.06666666666666667s
 }
-.ldio-1akyqjrxu0e div:nth-child(3) {
-  background: #1110fe;
-  animation: ldio-1akyqjrxu0e-o 0.5714285714285714s linear infinite;
-  animation-delay: -0.2857142857142857s;
+.ldio-nxtxow40e7 div:nth-child(3) {
+  left: 67.5px;
+  background: #00fcef;
+  animation: ldio-nxtxow40e7-3 0.6666666666666666s cubic-bezier(0,0.5,0.5,1) infinite;
+  animation-delay: undefineds
 }
-.loadingio-spinner-dual-ball-bp6pqhi51sp {
+
+.loadingio-spinner-pulse-if2u0pyqwxs {
   width: 100px;
   height: 100px;
   display: inline-block;
   overflow: hidden;
   background: #ffffff;
 }
-.ldio-1akyqjrxu0e {
+.ldio-nxtxow40e7 {
   width: 100%;
   height: 100%;
   position: relative;
@@ -56,4 +56,4 @@
   backface-visibility: hidden;
   transform-origin: 0 0; /* see note above */
 }
-.ldio-1akyqjrxu0e div { box-sizing: content-box; }
+.ldio-nxtxow40e7 div { box-sizing: content-box; }
