--- a/blocks/single-card/_single-card.scss
+++ b/blocks/single-card/_single-card.scss
@@ -1,1 +1,82 @@
 @import "./single-card-preloader";
+
+.single-card {
+  width: 100%;
+  height: 100%;
+  @include min-width-and-height(280px, 450px);
+  @include max-width-and-height(30vw, 640px);
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  &__content {
+    width: 100%;
+    height: auto;
+  }
+
+  &__header-line {
+    width: 100%;
+    height: 20%;
+  }
+
+  &__header-line::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: rgba($black, 0.2);
+    display: block;
+    margin-top: 15px;
+  }
+
+  &__question {
+    @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
+    line-height: 1em;
+    color: $black;
+  }
+
+  &__answer {
+    width: 100%;
+    @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
+    line-height: 1em;
+    color: $black;
+    margin-top: 20px;
+    white-space: normal;
+  }
+
+  &__info {
+    width: auto;
+  }
+
+  &__info::before {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: rgba($black, 0.2);
+    display: block;
+    margin-bottom: 15px;
+  }
+
+  &__categories {
+  }
+
+  &__main-category {
+  }
+
+  &__additional-categories {
+  }
+
+  &__metadata {
+  }
+
+  &__time {
+  }
+
+  &__type {
+  }
+
+  &__lang {
+  }
+}
+
