--- a/blocks/single-card/_single-card.scss
+++ b/blocks/single-card/_single-card.scss
@@ -4,27 +4,27 @@
   width: 100%;
   height: 100%;
   @include min-width-and-height(280px, 450px);
-  @include max-width-and-height(30vw, 640px);
-  padding: 30px 20px;
+  @include max-width-and-height(100vw, 100vh);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  padding: 30px 20px;
 
   &__content {
     width: 100%;
-    height: auto;
+    height: 100%;
   }
 
   &__header-line {
     width: 100%;
-    height: 20%;
+    height: auto;
   }
 
   &__header-line::after {
-    content: '';
     width: 100%;
     height: 2px;
+    content: '';
     background-color: rgba($black, 0.2);
     display: block;
     margin-top: 15px;
@@ -37,28 +37,22 @@
   }
 
   &__answer {
-    width: 100%;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 1em;
     color: $black;
     margin-top: 20px;
-    white-space: normal;
   }
 
   &__info {
-    width: auto;
-  }
-
-  &__info::before {
-    content: '';
     width: 100%;
-    height: 2px;
-    background-color: rgba($black, 0.2);
-    display: block;
-    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
   }
 
   &__categories {
+    text-align: end;
   }
 
   &__main-category {
@@ -68,6 +62,7 @@
   }
 
   &__metadata {
+    text-align: start;
   }
 
   &__time {
@@ -79,4 +74,3 @@
   &__lang {
   }
 }
-
