--- a/src/index.css
+++ b/src/index.css
@@ -344,26 +344,26 @@
   height: 100%;
   min-width: 280px;
   min-height: 450px;
-  max-width: 30vw;
-  max-height: 640px;
-  padding: 30px 20px;
+  max-width: 100vw;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  padding: 30px 20px;
 }
 .single-card__content {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 .single-card__header-line {
   width: 100%;
-  height: 20%;
+  height: auto;
 }
 .single-card__header-line::after {
-  content: "";
   width: 100%;
   height: 2px;
+  content: "";
   background-color: rgba(0, 0, 0, 0.2);
   display: block;
   margin-top: 15px;
@@ -376,25 +376,25 @@
   color: #000000;
 }
 .single-card__answer {
-  width: 100%;
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1em;
   color: #000000;
   margin-top: 20px;
-  white-space: normal;
 }
 .single-card__info {
-  width: auto;
-}
-.single-card__info::before {
-  content: "";
   width: 100%;
-  height: 2px;
-  background-color: rgba(0, 0, 0, 0.2);
-  display: block;
-  margin-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.single-card__categories {
+  text-align: end;
+}
+.single-card__metadata {
+  text-align: start;
 }
 .container {
   width: 100%;
@@ -440,6 +440,8 @@
   z-index: 10;
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
 .slide__inner--slide-intro {
   min-width: 320px;
@@ -447,16 +449,10 @@
   max-width: 60vw;
   max-height: 80vh;
   padding: 20px;
-  flex-direction: column;
-  align-items: center;
 }
 .slide__inner--slide-cards {
   min-width: 320px;
   min-height: 470px;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
 }
 .slide__title {
   font-family: "Share Tech Mono", "JetBrains Mono", monospace;
@@ -482,7 +478,7 @@
   height: 100%;
   min-width: 280px;
   min-height: 450px;
-  max-width: 30vw;
+  max-width: 60vw;
   max-height: 640px;
   background-color: #ffffff;
   border-radius: 25px;
