--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,18 @@
   transform-origin: 0 0; /* see note above */
 }
 
+.form-holder {
+  width: 100%;
+  height: 100%;
+  min-width: 280px;
+  min-height: 320px;
+  max-width: 100%;
+  max-height: 640px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .add-card-form {
   width: 100%;
   height: 100%;
@@ -339,6 +351,22 @@
   box-sizing: content-box;
 }
 
+.single-card-holder {
+  width: 100%;
+  height: 100%;
+  min-width: 280px;
+  min-height: 450px;
+  max-width: 60vw;
+  max-height: 640px;
+  background-color: #ffffff;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  margin: 10px 20px;
+  z-index: 10;
+  overflow: hidden;
+}
+
 .single-card {
   width: 100%;
   height: 100%;
@@ -359,6 +387,7 @@
 .single-card__header-line {
   width: 100%;
   height: auto;
+  position: relative;
 }
 .single-card__header-line::after {
   width: 100%;
@@ -366,7 +395,9 @@
   content: "";
   background-color: rgba(0, 0, 0, 0.2);
   display: block;
-  margin-top: 15px;
+  left: 0;
+  bottom: -15px;
+  position: absolute;
 }
 .single-card__question {
   font-family: "JetBrains Mono", monospace;
@@ -381,14 +412,25 @@
   font-size: 1.6rem;
   line-height: 1em;
   color: #000000;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 .single-card__info {
   width: 100%;
+  display: block;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+  position: relative;
+}
+.single-card__info::before {
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  left: 0;
+  top: -15px;
+  content: "";
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .single-card__categories {
   text-align: end;
@@ -461,32 +503,6 @@
   line-height: 1em;
   color: #ffffff;
   word-spacing: -10px;
-}
-.slide__form-holder {
-  width: 100%;
-  height: 100%;
-  min-width: 280px;
-  min-height: 320px;
-  max-width: 100%;
-  max-height: 640px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.slide__single-card-holder {
-  width: 100%;
-  height: 100%;
-  min-width: 280px;
-  min-height: 450px;
-  max-width: 60vw;
-  max-height: 640px;
-  background-color: #ffffff;
-  border-radius: 25px;
-  display: flex;
-  align-items: center;
-  margin: 10px 20px;
-  z-index: 10;
-  overflow: hidden;
 }
 
 /*# sourceMappingURL=index.css.map */
