--- a/src/index.css
+++ b/src/index.css
@@ -374,6 +374,11 @@
   min-height: 450px;
   max-width: 100vw;
   max-height: 100vh;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.2em;
+  color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -399,23 +404,14 @@
   bottom: -15px;
   position: absolute;
 }
-.single-card__question {
-  font-family: "JetBrains Mono", monospace;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1em;
-  color: #000000;
-}
 .single-card__answer {
-  font-family: "JetBrains Mono", monospace;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1em;
-  color: #000000;
   margin-top: 30px;
 }
 .single-card__info {
   width: 100%;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.2rem;
   display: block;
   display: flex;
   flex-direction: row;
@@ -435,9 +431,34 @@
 .single-card__categories {
   text-align: end;
 }
+.single-card__main-category {
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.2em;
+  display: block;
+  cursor: pointer;
+}
+.single-card__additional-categories {
+  display: block;
+  cursor: pointer;
+}
 .single-card__metadata {
   text-align: start;
 }
+.single-card__time {
+  display: block;
+  cursor: pointer;
+}
+.single-card__type {
+  display: block;
+  cursor: pointer;
+}
+.single-card__lang {
+  display: block;
+  cursor: pointer;
+}
+
 .container {
   width: 100%;
   height: 100vh;
