--- a/blocks/single-card/_single-card.scss
+++ b/blocks/single-card/_single-card.scss
@@ -11,7 +11,6 @@
   align-items: center;
   margin: 10px 20px;
   z-index: $top-layer;
-  overflow: hidden;
 }
 
 .single-card {
@@ -20,7 +19,7 @@
   @include min-width-and-height(280px, 450px);
   @include max-width-and-height(100vw, 100vh);
   @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
-  line-height: 1.2em;
+  line-height: 1.5em;
   color: $black;
   display: flex;
   flex-direction: column;
@@ -31,11 +30,13 @@
   &__content {
     width: 100%;
     height: 100%;
+    overflow: hidden;
   }
 
   &__header-line {
     width: 100%;
-    height: auto;
+    height: 100%;
+    min-height: 20px;
     position: relative;
   }
 
@@ -60,6 +61,7 @@
   &__info {
     width: 100%;
     @include font-family-weight-size($jetbrains-font, $regular, 1.2rem);
+    line-height: 1.4em;
     display: block;
     display: flex;
     flex-direction: row;
@@ -87,7 +89,6 @@
 
   &__main-category {
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
-    line-height: 1.2em;
     display: block;
     cursor: pointer;
   }
