--- a/src/index.css
+++ b/src/index.css
@@ -364,7 +364,6 @@
   align-items: center;
   margin: 10px 20px;
   z-index: 10;
-  overflow: hidden;
 }
 
 .single-card {
@@ -377,7 +376,7 @@
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.6rem;
-  line-height: 1.2em;
+  line-height: 1.5em;
   color: #000000;
   display: flex;
   flex-direction: column;
@@ -388,10 +387,12 @@
 .single-card__content {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 .single-card__header-line {
   width: 100%;
-  height: auto;
+  height: 100%;
+  min-height: 20px;
   position: relative;
 }
 .single-card__header-line::after {
@@ -412,6 +413,7 @@
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.2rem;
+  line-height: 1.4em;
   display: block;
   display: flex;
   flex-direction: row;
@@ -435,7 +437,6 @@
   font-family: "JetBrains Mono", monospace;
   font-weight: 400;
   font-size: 1.6rem;
-  line-height: 1.2em;
   display: block;
   cursor: pointer;
 }
