--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -70,6 +70,7 @@ $default-box-shadow: 0px 0px 10px 0px $black;
   @include font-family-weight-size($default-font, $regular, 10px);
   line-height: 1.2rem;
   color: $black;
+  scroll-behavior: smooth;
 }
 
 *,
