--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -73,3 +73,15 @@
     }
   }
 }
+
+.go-to-top-and-bottom-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 25px;
+  background-color: $black;
+  color: $white;
+  z-index: $highest-layer;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+}
