--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -2,6 +2,7 @@
 @import './../../blocks/add-card-form/add-card-form';
 @import './../../blocks/bubble/bubble';
 @import './../../blocks/single-card/single-card';
+@import './../../blocks/go-to-button/go-to-button';
 
 .container {
   width: 100%;
@@ -72,16 +73,4 @@
 
     }
   }
-}
-
-.go-to-top-and-bottom-button {
-  width: 40px;
-  height: 40px;
-  border-radius: 25px;
-  background-color: $black;
-  color: $white;
-  z-index: $highest-layer;
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
 }
