--- a/blocks/go-to-button/_go-to-button.scss
+++ b/blocks/go-to-button/_go-to-button.scss
@@ -1,13 +1,26 @@
 @import './../../src/scss/normalize';
 
 .go-to-top-and-bottom-button {
-  width: 40px;
-  height: 40px;
+  width: 48px;
+  height: 48px;
   border-radius: 25px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
   background-color: $black;
   color: $white;
   z-index: $highest-layer;
   position: fixed;
   right: 10px;
   bottom: 10px;
+  transition-duration: 0.4s;
+
+  &--bot {
+    background-image: url(./../blocks/go-to-button/img/bot-arrow-32.svg);
+  }
+
+  &--top {
+    background-image: url(./../blocks/go-to-button/img/top-arrow-32.svg);
+  }
 }
+
