--- a/src/index.css
+++ b/src/index.css
@@ -495,15 +495,25 @@
 }
 
 .go-to-top-and-bottom-button {
-  width: 40px;
-  height: 40px;
+  width: 48px;
+  height: 48px;
   border-radius: 25px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
   background-color: #000000;
   color: #ffffff;
   z-index: 1000;
   position: fixed;
   right: 10px;
   bottom: 10px;
+  transition-duration: 0.4s;
+}
+.go-to-top-and-bottom-button--bot {
+  background-image: url(./../blocks/go-to-button/img/bot-arrow-32.svg);
+}
+.go-to-top-and-bottom-button--top {
+  background-image: url(./../blocks/go-to-button/img/top-arrow-32.svg);
 }
 
 .container {
