--- a/blocks/go-to-button/_go-to-button.scss
+++ b/blocks/go-to-button/_go-to-button.scss
@@ -4,10 +4,11 @@
   width: 48px;
   height: 48px;
   border-radius: 25px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-color: $black;
+  @include linear-gradient(
+      45deg,
+      #db83d1 0%,
+      #e6bde9 100%);
+  
   color: $white;
   z-index: $highest-layer;
   position: fixed;
@@ -15,12 +16,13 @@
   bottom: 10px;
   transition-duration: 0.4s;
 
-  &--bot {
+  &__arrow {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
     background-image: url(./../blocks/go-to-button/img/bot-arrow-32.svg);
-  }
-
-  &--top {
-    background-image: url(./../blocks/go-to-button/img/top-arrow-32.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto;
   }
 }
-
