--- a/src/index.css
+++ b/src/index.css
@@ -498,10 +498,11 @@
   width: 48px;
   height: 48px;
   border-radius: 25px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-color: #000000;
+  background-image: -webkit-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: -moz-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: -ms-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: -o-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
   color: #ffffff;
   z-index: 1000;
   position: fixed;
@@ -509,11 +510,14 @@
   bottom: 10px;
   transition-duration: 0.4s;
 }
-.go-to-top-and-bottom-button--bot {
+.go-to-top-and-bottom-button__arrow {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
   background-image: url(./../blocks/go-to-button/img/bot-arrow-32.svg);
-}
-.go-to-top-and-bottom-button--top {
-  background-image: url(./../blocks/go-to-button/img/top-arrow-32.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 .container {
