--- a/blocks/bubble/_bubble.scss
+++ b/blocks/bubble/_bubble.scss
@@ -1,10 +1,14 @@
+@import './../../src/scss/normalize';
+
 .bubble {
   width: 100%;
   height: 100%;
-  @include max-width-and-height(1vw, 1vw);
+  @include max-width-and-height(1vmax, 1vmax);
   border-radius: 50%;
   background-color: red;
   position: absolute;
+  top: 0;
+  left: 0;
   z-index: $average-layer;
 
   &--big-size {
