--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -10,6 +10,10 @@
   &--slide-cards {
     height: auto;
   }
+
+  &--slide-filter {
+    height: 50vh;
+  }
 }
 
 .slide {
@@ -40,6 +44,10 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+  }
+
+  &--slide-fiter {
+
   }
 
   &__inner {
