--- a/src/index.css
+++ b/src/index.css
@@ -545,6 +545,18 @@
   background-position: center;
   background-size: cover;
 }
+.slide--slide-filter {
+  flex-direction: column;
+  background-image: -webkit-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: -moz-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: -ms-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: -o-linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  background-image: linear-gradient(45deg, #db83d1 0%, #e6bde9 100%);
+  color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 .slide__inner {
   width: 100%;
   height: 100%;
@@ -564,6 +576,13 @@
 .slide__inner--slide-cards {
   min-width: 320px;
   min-height: 470px;
+}
+.slide__inner--slide-filter {
+  min-width: 320px;
+  min-height: 360px;
+  max-width: 60vw;
+  max-height: 80vh;
+  padding: 20px;
 }
 .slide__title {
   font-family: "Share Tech Mono", "JetBrains Mono", monospace;
