feat: add 'trash-box' block for hidden cards

--- a/src/index.css
+++ b/src/index.css
@@ -593,5 +593,10 @@
   color: #ffffff;
   word-spacing: -10px;
 }
+.trash-box {
+  display: none;
+  visibility: hidden;
+  overflow: hidden;
+}
 
 /*# sourceMappingURL=index.css.map */
