--- a/src/index.css
+++ b/src/index.css
@@ -593,6 +593,82 @@
   color: #ffffff;
   word-spacing: -10px;
 }
+.filter__search {
+  display: block;
+  width: 100%;
+  height: 10%;
+  min-width: 280px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  border: none;
+  border-radius: 25px;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 100%;
+  color: #000000;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+.filter__date-wrapper {
+  width: 100%;
+  gap: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.filter__date-input {
+  width: 50%;
+  height: 10%;
+  min-width: 220px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  border: none;
+  border-radius: 25px;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 100%;
+  color: #000000;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+.filter__reset-date-button {
+  width: 50%;
+  height: 10%;
+  min-width: 40px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  border: none;
+  border-radius: 25px;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 100%;
+  color: #000000;
+  cursor: pointer;
+}
+.filter__reset-filter-button {
+  display: block;
+  width: 100%;
+  height: 10%;
+  min-width: 280px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  border: none;
+  border-radius: 25px;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 100%;
+  color: #000000;
+  cursor: pointer;
+}
+
 .trash-box {
   display: none;
   visibility: hidden;
