--- a/src/index.css
+++ b/src/index.css
@@ -617,9 +617,19 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  position: relative;
+}
+.filter__date-input-wrapper {
+  width: 100%;
+  height: 100%;
+  min-width: 220px;
+  min-height: 40px;
+  max-width: 100%;
+  max-height: 60px;
+  position: relative;
 }
 .filter__date-input {
-  width: 50%;
+  width: 100%;
   height: 10%;
   min-width: 220px;
   min-height: 40px;
@@ -631,9 +641,24 @@
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 100%;
-  color: #000000;
-  margin-bottom: 10px;
+  color: rgba(0, 0, 0, 0.5);
   padding: 10px 20px;
+}
+.filter__date-input-cover {
+  width: 20%;
+  height: 90%;
+  min-width: 40px;
+  min-height: 35px;
+  max-width: 30%;
+  max-height: 50px;
+  border: none;
+  border-radius: 25px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 5%;
+  background-color: #ffffff;
+  pointer-events: none;
 }
 .filter__reset-date-button {
   width: 50%;
