feat: expand 'search filter' to search through id too

--- a/src/index.css
+++ b/src/index.css
@@ -707,7 +707,7 @@
   font-size: 1.2rem;
   line-height: 100%;
   color: rgba(0, 0, 0, 0.5);
-  background-color: #e8e8e8;
+  background-color: #ffffff;
   margin-bottom: 10px;
   display: flex;
   justify-content: center;
