feat: add 'submit-message' block for submit reaction

--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -2,6 +2,7 @@
 @import './../../blocks/add-card-form/add-card-form';
 @import './../../blocks/single-card/single-card';
 @import './../../blocks/go-to-button/go-to-button';
+@import './../../blocks/submit-message/submit-message';
 
 .container {
   width: 100%;
