--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   background-color: transparent;
   position: relative;
   z-index: 0;
+  overflow-x: hidden;
 }
 
 .one-field-preloader {
@@ -476,6 +477,7 @@
   background-color: transparent;
   position: relative;
   z-index: 0;
+  overflow-x: hidden;
 }
 
 .go-to-top-and-bottom-button {
@@ -502,6 +504,74 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto;
+}
+
+:root {
+  font-family: "Share Tech Mono", "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 1.2rem;
+  color: #000000;
+  scroll-behavior: smooth;
+}
+
+*,
+*:after,
+*:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.body-of-the-page {
+  background-color: transparent;
+  position: relative;
+  z-index: 0;
+  overflow-x: hidden;
+}
+
+.submit-message {
+  width: 200px;
+  height: 50px;
+  border-width: 2px;
+  border-style: solid;
+  z-index: 1000;
+  pointer-events: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.submit-message--success {
+  border-color: #376335;
+  background-color: #D6E3CA;
+}
+.submit-message--error {
+  top: 80px;
+  border-color: #8C3343;
+  background-color: #E7D3D3;
+}
+.submit-message__img {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.submit-message__text {
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 100%;
+}
+.submit-message__text--success {
+  color: #376335;
+}
+.submit-message__text--error {
+  color: #8C3343;
 }
 
 .container {
@@ -706,7 +776,7 @@
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 100%;
-  color: rgba(0, 0, 0, 0.5);
+  color: #000000;
   background-color: #ffffff;
   margin-bottom: 10px;
   display: flex;
