--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -85,4 +85,5 @@ $default-box-shadow: 0px 0px 10px 0px $black;
   background-color: transparent;
   position: relative;
   z-index: $bottom-layer;
+  overflow-x: hidden;
 }
