--- a/src/index.css
+++ b/src/index.css
@@ -544,9 +544,9 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  position: absolute;
+  position: fixed;
   top: 10px;
-  right: 10px;
+  right: -175px;
 }
 .submit-message--success {
   border-color: #376335;
@@ -571,11 +571,6 @@
 }
 .submit-message__text--error {
   color: #8C3343;
-}
-
-.hidden {
-  visibility: hidden;
-  display: none;
 }
 
 .container {
